--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://generator.csepasanga2k18.workers.dev"></iframe>
+    <iframe src="https://gdindex.saranrajm31.workers.dev"></iframe>
 </body>
 </html>
